2001-08-01  Michael Meeks  <michael@ximian.com>

	* samples/controls/sample-control-container.c (main): upd.

2001-07-31  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added zh_TW.Big5 to ALL_LINGUAS.

2001-07-31  Michael Meeks  <michael@ximian.com>

	* tests/test-ui.c, 
	* tests/test-sensitivity.c, 
	* tests/test-moniker.c, 
	* tests/test-focus.c, 
	* tests/test-container.c, 
	* bonobo/bonobo-window.c, 
	* bonobo/bonobo-ui-main.c, 
	* bonobo/bonobo-ui-container.c, 
	* samples/controls/sample-control-factory.c, 
	* samples/controls/sample-control-container.c: remove 
	redundant liboaf.h includes.

2001-07-30  ERDI Gergo  <cactus@cactus.rulez.org>

	* bonobo/Makefile.am: Create our own marshallers instead of
	relying on libbonobo

	* bonobo/bonobo-ui-component.c: Use these marshallers

2001-07-30  Mikael Hallendal  <micke@codefactory.se>

	* tests/test-selector.c: include libgnome/libgnome.h instead

2001-07-31  Michael Meeks  <michael@ximian.com>

	* tests/test-ui.c (main): fixup set_containers.

2001-07-31  Jamil Geor <geor@ihug.co.nz>

	* bonobo/bonobo-ui-component.c (bonobo_ui_component_unset_container),
	(bonobo_ui_component_set_container): add opt_ev.

	* bonobo/bonobo-control.c (bonobo_control_finalize), 
	(bonobo_control_auto_merge): upd.

2001-07-30  Michael Meeks  <michael@ximian.com>

	* samples/bonoboui-hello/helloapp.c: kill libgnomeui includes.

	* tests/test-moniker.c (display_as_stream): show helpful exceptions.

2001-07-30  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-component.c (bonobo_ui_component_add_verb): upd.
	(bonobo_ui_component_add_verb_full): gclosureize.
	(bonobo_ui_component_add_listener): upd.
	(bonobo_ui_component_add_listener_full): gclosureize.
	(listener_destroy, verb_destroy): ditto.
	(ui_event): upd invoke.
	(marshal_VOID__USER_DATA_STRING): impl manualy to do some leve of
	nasty backwards compat with the Gnome::UIInfo stuff.
	(remove_verb): update.
	(bonobo_ui_component_remove_verb_by_closure): impl.