@@ -1,3 +1,9 @@
+2001-08-01  ERDI Gergo  <cactus@cactus.rulez.org>
+
+	* bonobo/bonobo-control.h: Add opt_ev's around the place
+
+	* bonobo/bonobo-control-frame.h: ditto
+
 2001-08-01  Michael Meeks  <michael@ximian.com>
 
 	* samples/controls/sample-control-container.c (main): upd.
